# Paper-Works

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: OUTPUT_TREE_EXAMPLE.md  V1_1_DOD_CHECKLIST.md  V1_1_PAPER_OUTPUTS_CHECKLIST.md  V1_1_PERFECT_INSTRUCTION.md  V1_1_SUCCESSOR_INSTRUCTIONS.md
paper_outputs/20260105_022324_demo_seed7/: meta_run.json
paper_outputs/20260105_022425_demo_seed7/: config_snapshot.json  meta_run.json
paper_outputs/20260105_022617_demo_seed7/: config_snapshot.json  meta_run.json
paper_outputs/20260105_022835_demo_seed7/: config_snapshot.json  meta_run.json
paper_outputs/20260105_022937_demo_seed7/: config_snapshot.json  meta_run.json
paper_outputs/20260105_023134_demo_seed7/: config_snapshot.json  meta_run.json
paper_outputs/20260105_023328_demo_seed7/: config_snapshot.json  meta_run.json
paper_outputs/20260105_025626_demo_seed7/: config_snapshot.json  meta_run.json
paper_outputs/20260105_025824_demo_seed7/: config_snapshot.json  meta_run.json
paper_outputs/20260105_030557_demo_seed7/: config_snapshot.json  meta_run.json
paper_outputs/20260105_030629_demo_seed7/: config_snapshot.json  meta_run.json
paper_outputs/20260105_030714_demo_seed7/: config_snapshot.json  meta_run.json
stabilitycheck/: __init__.py  assumptions.py  configs.py  contract.py  demo.py  dgp.py  engine.py  g.py  math_utils.py  nulls.py  plotting.py  report.py  runner.py  sampling.py  schema.py  softmax.py  split.py  stage2.py  stage25.py  testification.py  testing.py
tests/: test_smoke.py  test_softmax.py
(+74 files in other folders)
